Scrollbars missing on Document Properties editor Fixed
Committed by: Martin Kirsten

--- a/scripts/scss/newui.upload.scss
+++ b/scripts/scss/newui.upload.scss
@@ -278,8 +278,7 @@ table.metadataTable{
 		margin: 10px 0px;
 		vertical-align:top; 
 		padding: 15px; 
-		overflow-x: auto;
-    	overflow-y: hidden;
+		overflow: auto;
 		display: block;
 		border: 1px solid #85A2BD;
 		background-color: darken(#FFFFFF, 3%);
